devised basic categories for posting, mdl is neat

--- a/_includes/categories_list.html
+++ b/_includes/categories_list.html
@@ -1,18 +1,16 @@
 
-  <!-- <div class="archive-group">
-    {% capture category_name %}{{ category | first }}{% endcapture %}
-    <a href="{{ site.baseurl }}/category/{{category_name}}">{{ category_name }}</a>
-  </div> -->
-
 <ul class="mdl-list">
+    <li class="mdl-list__item mdl-list__item--two-line">
+        <a class="mdl-layout-title" href="/" >
+            <span>{{site.title}}</span>
+        </a>
+    </li>
+
     {% for category in site.categories %}
     {% capture category_name %}{{ category | first }}{% endcapture %}
-  <li class="mdl-list__item mdl-list__item--two-line">
-    <span class="mdl-list__item-primary-content">
-      <!-- <i class="material-icons mdl-list__item-avatar">person</i> -->
-      <a href="{{ site.baseurl }}/category/{{category_name}}">{{ category_name }}</a>
-      <!-- <span class="mdl-list__item-sub-title">62 Episodes</span> -->
-    </span>
+  <li class="mdl-list__item">
+      <a href="{{ site.baseurl }}/category/{{category_name}}" data-badge="{{category[1] | size}}"
+       class=" mdl-list__item-primary-content mdl-badge mdl-badge--overlap">{{ category_name }}</a>
 </li>
 {% endfor %}
 </ul>
