--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,38 +1,60 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  <head>
+<head>
     <meta charset="UTF-8">
 
-{% seo %}
+    {% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <script defer src="https://code.getmdl.io/1.3.0/material.js"></script>
+    <!-- <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}"> -->
     <link rel="stylesheet" href="{{ '/css/site.css' | relative_url }}">
-  </head>
-  <body>
+</head>
+<body>
 
-      <div class="mdl-layout mdl-js-layout">
-       <header class="mdl-layout__header mdl-layout__header">
-         <div class="mdl-layout__header-row">
-           <span class="mdl-layout-title">{{site.title}}</span>
-           <div class="mdl-layout-spacer"></div>
-           <nav class="mdl-navigation">
-           </nav>
-         </div>
-       </header>
-       <div class="mdl-layout__drawer" >
-         <span class="mdl-layout-title">{{site.title}}</span>
-         {% include sidenav.html %}
-       </div>
-       <main class="mdl-layout__content">
-           {{content}}
-       </main>
-     </div>
+
+    <div class="mdl-layout mdl-js-layout ">
+
+        <header class="mdl-layout__header mdl-layout__header">
+            <div class="mdl-layout__header-row">
+                <a style="color: white;" class="mdl-layout-title" href="/" >
+                    <span>{{site.title}}</span>
+                </a>
+                <div class="mdl-layout-spacer"></div>
+                <nav class="mdl-navigation">
+                    <a id="my_github" class="mdl-navigation__link" href="https://github.com/Oorpe">
+                        <img width="32" height="32" src="/assets/GitHub-Mark-Light-64px.png">
+                    </a>
 
 
 
-  </body>
+                </nav>
+                <p class="mdl-tooltip" data-mdl-for="my_github">
+                    My github profile
+                </p>
+
+            </div>
+        </header>
+        <div class="mdl-layout__drawer" >
+
+            {% include sidenav.html %}
+        </div>
+        <main class="mdl-layout__content">
+            {{content}}
+        </main>
+        <footer class="mdl-mini-footer">
+            <div class="mdl-mini-footer__left-section">
+                <ul class="mdl-mini-footer__link-list">
+                    <!-- <li><a href="#">Help</a></li>
+                    <li><a href="#">Privacy & Terms</a></li> -->
+                </ul>
+            </div>
+        </footer>
+    </div>
+
+
+
+</body>
 </html>
