--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -6,11 +6,11 @@
     {% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.js"></script>
-    <!-- <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}"> -->
     <link rel="stylesheet" href="{{ '/css/site.css' | relative_url }}">
+    <script defer src="https://code.getmdl.io/1.3.0/material.js"></script>
 </head>
 <body>
 
