--- a/css/site.scss
+++ b/css/site.scss
@@ -6,9 +6,28 @@
 
 
 
-blockquote:before{
-  content: '”\00000A';
+blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 2em 10px;
+  margin-left: 2em;
+  margin-right: 0px;
+  // width: 100%;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
 }
-blockquote:after{
-  content: "”";
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+blockquote p {
+  display: inline;
+}
+
+.mdl-card__supporting-text{
+    width: 100%;
 }
