fix category buttons

--- a/_includes/categories_list.html
+++ b/_includes/categories_list.html
@@ -1,4 +1,4 @@
-
+<div style="height: 100%;" class="mdl-primary">
 <ul class="mdl-list">
     <li class="mdl-list__item mdl-list__item--two-line">
         <a class="mdl-layout-title" href="/" >
@@ -14,3 +14,4 @@
 </li>
 {% endfor %}
 </ul>
+</div>
