--- a/_includes/categorical_next_prev.html
+++ b/_includes/categorical_next_prev.html
@@ -1,11 +1,12 @@
 
-{%assign cat = page.category%}
+{%assign cat = page.categories | first %}
 {% for post in site.categories[cat] %}
      {% if post.url == page.url %}
          {% assign post_index0 = forloop.index0 %}
          {% assign post_index1 = forloop.index %}
      {% endif %}
  {% endfor %}
+
  {% for post in site.categories[cat] %}
      {% if post_index0 == forloop.index %}
 
@@ -18,7 +19,6 @@
         {% if prev_thing %}
             {% include peeky_link.html post=prev_thing p_prev="true" %}
         {% endif %}
-        <div class="mdl-layout-spacer"></div>
         {% if next_thing %}
             {% include peeky_link.html post=next_thing p_next="true" %}
         {% endif %}
